shapefiles do not write correctly (they ignore the last 3/6 columns). Need to fix this. Also, they take too long to read and write. Doing commit now to explore memory-mapped files.
git-svn-id: file:///mnt/svn/rtmath@667 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/tests/tests.vcxproj.filters
+++ b/rtmath/rtmath/tests/tests.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="test_serialization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_shapefile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="data\rtmath.conf">
