--- a/rtmath/rtmath/tests/tests.vcxproj
+++ b/rtmath/rtmath/tests/tests.vcxproj
@@ -84,6 +84,7 @@
     <ClCompile Include="test_quadrature.cpp" />
     <ClCompile Include="test_recPolys.cpp" />
     <ClCompile Include="test_serialization.cpp" />
+    <ClCompile Include="test_shapefile.cpp" />
     <ClCompile Include="test_units.cpp" />
   </ItemGroup>
   <ItemGroup>
