Inertia tensor fixed. Terms before were wrong. As a result, I needed to add covariance to the measurements.
Created test shape which is small and really flat. Has 50 points, two z levels, and is a
5 x 5 square in x and y.

PE still clearly needs work.


git-svn-id: file:///mnt/svn/rtmath@670 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/tests/tests.vcxproj
+++ b/rtmath/rtmath/tests/tests.vcxproj
@@ -91,6 +91,7 @@
     <None Include="data\2mm12shape.txt" />
     <None Include="data\ddscat-snow-18-3-7.shp" />
     <None Include="data\ddscat.par" />
+    <None Include="data\miniflake.shp" />
     <None Include="data\rtmath.conf" />
     <None Include="data\testing.conf" />
   </ItemGroup>
