Added boost_program_options to COMMON_LIBS
git-svn-id: file:///mnt/svn/rtmath@678 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -124,6 +124,7 @@ ELSE()
 		boost_filesystem
 		boost_date_time
 		boost_iostreams
+		boost_program_options
                 boost_serialization
 		boost_unit_test_framework
 		boost_system
