--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -84,6 +84,7 @@ if(LOAD_PACKAGES)
 	add_package_dependency(rtmath DEPENDS_ON NetCDF)
 	add_package_dependency(rtmath DEPENDS_ON ROOT)
 	add_package_dependency(rtmath DEPENDS_ON Boost)
+	add_package_dependency(rtmath DEPENDS_ON PCL)
 	#add_package_dependency(rtmath DEPENDS_ON )
 	#add_package_dependency(rtmath DEPENDS_ON )
 endif()
