--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -84,6 +84,7 @@ if(LOAD_PACKAGES)
 	add_package_dependency(rtmath DEPENDS_ON NetCDF)
 	add_package_dependency(rtmath DEPENDS_ON ROOT)
 	add_package_dependency(rtmath DEPENDS_ON Boost)
+	add_package_dependency(rtmath DEPENDS_ON VTK)
 	add_package_dependency(rtmath DEPENDS_ON PCL)
 	#add_package_dependency(rtmath DEPENDS_ON )
 	#add_package_dependency(rtmath DEPENDS_ON )
@@ -98,6 +99,8 @@ include_directories(${rtmath_INCLUDE_DIRS})
 set(rtmath_INCLUDES ${rtmath_INCLUDE_DIRS} CACHE INTERNAL "rtmath-included dirs")
 set(rtmath_LIBS ${rtmath_LIBRARIES} CACHE INTERNAL "rtmath-included libs")
 
+#message("${rtmath_INCLUDES}")
+#message("${rtmath_LIBS}")
 
 #add_package_dependency(rtmath-static DEPENDS_ON rtmathDummy)
 set(rtmath-static_LIBRARIES ${rtmath_LIBRARIES})
