--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
 add_subdirectory (sector)
 add_subdirectory (shape)
+add_subdirectory (shape-basicdata)
 add_subdirectory (transmittance)
 add_subdirectory (uuid)
 
