Added Garret programs that can read a png image and do processing.
git-svn-id: file:///mnt/svn/rtmath@692 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -92,6 +92,8 @@ if(LOAD_PACKAGES)
 	# Used by the core library for statistics generation.
 	find_package(VTK REQUIRED)
 	find_package(PCL 1.0 REQUIRED)
+	# ImageMagick is needed for loading PNG files
+	find_package(ImageMagick COMPONENTS Magick++ REQUIRED)
 endif()
 # Take OpenMP option and enable / disable as appropriate
 IF(USE_OPENMP)
