--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory (ddparse)
 add_subdirectory (ddscat)
 add_subdirectory (ddscat-genparams)
 add_subdirectory (expand-shorthand)
+add_subdirectory (garrett)
 add_subdirectory (getm)
 add_subdirectory (mie)
 add_subdirectory (roottest)
