--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -86,6 +86,7 @@ if(LOAD_PACKAGES)
 	add_package_dependency(rtmath DEPENDS_ON Boost)
 	add_package_dependency(rtmath DEPENDS_ON VTK)
 	add_package_dependency(rtmath DEPENDS_ON PCL)
+	add_package_dependency(rtmath DEPENDS_ON ImageMagick)
 	#add_package_dependency(rtmath DEPENDS_ON )
 	#add_package_dependency(rtmath DEPENDS_ON )
 endif()
