The serialization issue was stupid. It was not a boost issue. The problem was that rtmath-shape was writing vector<...> for single file output mode instead of just shapeFileStats.
rtmath-shape now only writes one xml file per input. shape-basicdata has a switch to
read the older format to keep consistency with the data that I already generated.


git-svn-id: file:///mnt/svn/rtmath@696 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -49,7 +49,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PrecompiledHeaderFile>../rtmath/Stdafx.h</PrecompiledHeaderFile>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4996;4800</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4996;4800;4251</DisableSpecificWarnings>
       <PreprocessorDefinitions>_MBCS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/Zm1000 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
