General structure of rtmath-tmatrix-convert-from-ddscat-qt created. I need to implement the rest of the tmatrix stuff and the improved dielectrics before linkage. I'm targeting monday for the beginning of the batch runs.
git-svn-id: file:///mnt/svn/rtmath@705 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -28,6 +28,7 @@ option ( MAKE_GUIS
 
 if (MAKE_GUIS)
 add_subdirectory (ddscat-genparams-qt)
+add_subdirectory (tmatrix-convert-from-ddscat)
 endif()
 
 
