git-svn-id: file:///mnt/svn/rtmath@715 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/tmatrix-convert-from-ddscat/CMakeLists.txt
+++ b/rtmath/rtmath-apps/tmatrix-convert-from-ddscat/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories (
 )
 
 add_executable (rtmath-tmatrix-convert-from-ddscat-qt 
-	main.cpp stdafx.cpp frmmain.cpp frmtarget.cpp
+	main.cpp frmmain.cpp
 	${tmconvert-qt_MOC_SRCS}
 	${tmconvert-qt_UI_HDRS}
 	)
