It all builds on linux, but during the test execution I encounter a segfault in the convex hull generation. No idea why, as the convex hull was working perfectly before. Will debug tomorrow. Too bad, as I was hoping to test some runs today.
Also need to check if Fortran specifier in rtmath CMakeLists is a bad idea. Necessary to link against tmatrix in linux while outside of the tmatrix root, but it might cause cmake builds to fail on windows.



git-svn-id: file:///mnt/svn/rtmath@717 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -3,7 +3,7 @@
 # visual studio solutions and xcode projects
 
 cmake_minimum_required (VERSION 2.8)
-project(rtmath)
+project(rtmath CXX Fortran C)
 
 # Add path for custom modules
 set(CMAKE_MODULE_PATH
