--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -97,6 +97,8 @@
     <ClInclude Include="rtmath\common_templates.h" />
     <ClInclude Include="rtmath\config.h" />
     <ClInclude Include="rtmath\coords.h" />
+    <ClInclude Include="rtmath\ddscat\shapestatsRotated.h" />
+    <ClInclude Include="rtmath\ddscat\shapestatsviews.h" />
     <ClInclude Include="rtmath\Garrett\image.h" />
     <ClInclude Include="rtmath\Garrett\mesh.h" />
     <ClInclude Include="rtmath\Garrett\pclstuff.h" />
@@ -182,6 +184,15 @@
     <ClInclude Include="rtmath\ROOT_functions.h" />
     <ClInclude Include="rtmath\rtmath.h" />
     <ClInclude Include="rtmath\serialization.h" />
+    <ClInclude Include="rtmath\Serialization\common_templates_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\ddparGenerator_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\ddpar_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\matrixop_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\rotations_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\shapefile_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\shapestatsRotated_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\shapestats_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\shapes_serialization.h" />
     <ClInclude Include="rtmath\Stdafx.h" />
     <ClInclude Include="rtmath\units.h" />
     <ClInclude Include="rtmath\VTKlink.h" />
@@ -265,7 +276,6 @@
     <ClCompile Include="src\interpolatable.cpp" />
     <ClCompile Include="src\laguerre.cpp" />
     <ClCompile Include="src\legendre.cpp" />
-    <ClCompile Include="src\matrixop-ipp.cpp" />
     <ClCompile Include="src\matrixop.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\mie-abNCalc.cpp" />
@@ -292,7 +302,6 @@
     <ClCompile Include="src\refract.cpp" />
     <ClCompile Include="src\ROOT_functions.cpp" />
     <ClCompile Include="src\rotations.cpp" />
-    <ClCompile Include="src\rtmath.cpp" />
     <ClCompile Include="src\runScripts.cpp" />
     <ClCompile Include="src\Scalc-Rayleigh.cpp" />
     <ClCompile Include="src\serialization.cpp" />
@@ -300,6 +309,8 @@
     <ClCompile Include="src\shapes-generators.cpp" />
     <ClCompile Include="src\shapes.cpp" />
     <ClCompile Include="src\shapestats.cpp" />
+    <ClCompile Include="src\shapestatsRotated.cpp" />
+    <ClCompile Include="src\shapestats_genstats.cpp" />
     <ClCompile Include="src\Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
