rtmath serialization has been completely redone with minimally-intrusive versions designed to speed up compile times. The cpp files implement the serialization for text and xml archives. The archive formats chosen are determined by serialization_macros.h.
The apps and tests have not been updated. These need to be changed to refer to the
correct serialization files.

command.h has had splitSet split off into splitSet.h and .cpp. This specializes the
template and reduces header sizes.

Most files compile in less than three seconds, with the exception of the boost::accumulator
stuff which boes not perform well in msvc.

Also, some redundant headers have been removed.


git-svn-id: file:///mnt/svn/rtmath@736 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -420,6 +420,12 @@
     <ClInclude Include="rtmath\Serialization\shapes_serialization.h">
       <Filter>Header Files\Serialization</Filter>
     </ClInclude>
+    <ClInclude Include="rtmath\splitSet.h">
+      <Filter>Header Files\General</Filter>
+    </ClInclude>
+    <ClInclude Include="rtmath\Serialization\serialization_macros.h">
+      <Filter>Header Files\Serialization</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="rtmath\error\debug_subversion.h.template">
@@ -734,6 +740,36 @@
     </ClCompile>
     <ClCompile Include="src\shapestats_genstats.cpp">
       <Filter>Source Files\ddscat</Filter>
+    </ClCompile>
+    <ClCompile Include="src\rotations_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\splitSet.cpp">
+      <Filter>Source Files\General</Filter>
+    </ClCompile>
+    <ClCompile Include="src\shapefile_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\matrixop_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ddpar_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\common_templates_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\shapes_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ddparGenerator_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\shapestatsRotated_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
+    </ClCompile>
+    <ClCompile Include="src\shapestats_serialization.cpp">
+      <Filter>Source Files\Serialization</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
