--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -189,10 +189,12 @@
     <ClInclude Include="rtmath\Serialization\ddpar_serialization.h" />
     <ClInclude Include="rtmath\Serialization\matrixop_serialization.h" />
     <ClInclude Include="rtmath\Serialization\rotations_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\serialization_macros.h" />
     <ClInclude Include="rtmath\Serialization\shapefile_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapestatsRotated_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapestats_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapes_serialization.h" />
+    <ClInclude Include="rtmath\splitSet.h" />
     <ClInclude Include="rtmath\Stdafx.h" />
     <ClInclude Include="rtmath\units.h" />
     <ClInclude Include="rtmath\VTKlink.h" />
@@ -243,6 +245,7 @@
     <ClCompile Include="src\bhmie.cpp" />
     <ClCompile Include="src\chebyshev.cpp" />
     <ClCompile Include="src\command.cpp" />
+    <ClCompile Include="src\common_templates_serialization.cpp" />
     <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\coords.cpp" />
     <ClCompile Include="src\daDiagonalMatrix.cpp" />
@@ -259,6 +262,8 @@
     <ClCompile Include="src\ddOutputSingle.cpp" />
     <ClCompile Include="src\ddpar.cpp" />
     <ClCompile Include="src\ddparGenerator.cpp" />
+    <ClCompile Include="src\ddparGenerator_serialization.cpp" />
+    <ClCompile Include="src\ddpar_serialization.cpp" />
     <ClCompile Include="src\ddscat.cpp" />
     <ClCompile Include="src\ddScattMatrix.cpp" />
     <ClCompile Include="src\ddweights.cpp" />
@@ -277,6 +282,7 @@
     <ClCompile Include="src\laguerre.cpp" />
     <ClCompile Include="src\legendre.cpp" />
     <ClCompile Include="src\matrixop.cpp" />
+    <ClCompile Include="src\matrixop_serialization.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\mie-abNCalc.cpp" />
     <ClCompile Include="src\mie-AnCalc.cpp" />
@@ -302,15 +308,21 @@
     <ClCompile Include="src\refract.cpp" />
     <ClCompile Include="src\ROOT_functions.cpp" />
     <ClCompile Include="src\rotations.cpp" />
+    <ClCompile Include="src\rotations_serialization.cpp" />
     <ClCompile Include="src\runScripts.cpp" />
     <ClCompile Include="src\Scalc-Rayleigh.cpp" />
     <ClCompile Include="src\serialization.cpp" />
     <ClCompile Include="src\shapefile.cpp" />
+    <ClCompile Include="src\shapefile_serialization.cpp" />
     <ClCompile Include="src\shapes-generators.cpp" />
     <ClCompile Include="src\shapes.cpp" />
     <ClCompile Include="src\shapestats.cpp" />
     <ClCompile Include="src\shapestatsRotated.cpp" />
+    <ClCompile Include="src\shapestatsRotated_serialization.cpp" />
     <ClCompile Include="src\shapestats_genstats.cpp" />
+    <ClCompile Include="src\shapestats_serialization.cpp" />
+    <ClCompile Include="src\shapes_serialization.cpp" />
+    <ClCompile Include="src\splitSet.cpp" />
     <ClCompile Include="src\Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
