need to figure out how to link tmatrix-fortran on windows. dll attempt does not get common block to work. will fix tomorrow.
git-svn-id: file:///mnt/svn/rtmath@740 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/tmatrix-convert-from-ddscat/tmatrix-convert-from-ddscat.vcxproj
+++ b/rtmath/rtmath-apps/tmatrix-convert-from-ddscat/tmatrix-convert-from-ddscat.vcxproj
@@ -49,7 +49,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
-      <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories);C:\Users\rhoneyager\Documents\Visual Studio 2010\Projects\rtmath\Debug</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>qtmaind.lib;QtCored4.lib;QtGuid4.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
