shapestatsviews now compiles and is used in one of the programs. tmData class created that gives a header and links the stats to the tmatrix converter. tmatrix-convert now fully implemented for the isotropic case. need to finish the stat unit check and redo.
ddscattmatrix needs to be split into two derived classes, depending on if f is known.
the other class will just hold P. needed for ddavg import.

need to switch std to boost shared_ptrs and need to serialize the rest of the ddscat code.

then, q and backscatter can be calculated and compared.


git-svn-id: file:///mnt/svn/rtmath@741 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -97,8 +97,10 @@
     <ClInclude Include="rtmath\common_templates.h" />
     <ClInclude Include="rtmath\config.h" />
     <ClInclude Include="rtmath\coords.h" />
+    <ClInclude Include="rtmath\ddscat\ddavg.h" />
     <ClInclude Include="rtmath\ddscat\shapestatsRotated.h" />
     <ClInclude Include="rtmath\ddscat\shapestatsviews.h" />
+    <ClInclude Include="rtmath\ddscat\tmData.h" />
     <ClInclude Include="rtmath\Garrett\image.h" />
     <ClInclude Include="rtmath\Garrett\mesh.h" />
     <ClInclude Include="rtmath\Garrett\pclstuff.h" />
@@ -194,6 +196,7 @@
     <ClInclude Include="rtmath\Serialization\shapestatsRotated_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapestats_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapes_serialization.h" />
+    <ClInclude Include="rtmath\Serialization\tmData_serialization.h" />
     <ClInclude Include="rtmath\splitSet.h" />
     <ClInclude Include="rtmath\Stdafx.h" />
     <ClInclude Include="rtmath\units.h" />
@@ -255,6 +258,7 @@
     <ClCompile Include="src\damatrix_quad.cpp" />
     <ClCompile Include="src\daPf.cpp" />
     <ClCompile Include="src\daStatic.cpp" />
+    <ClCompile Include="src\ddavg.cpp" />
     <ClCompile Include="src\ddLoader.cpp" />
     <ClCompile Include="src\ddOutput.cpp" />
     <ClCompile Include="src\ddOutputEnsemble.cpp" />
@@ -328,6 +332,7 @@
     </ClCompile>
     <ClCompile Include="src\surfaces.cpp" />
     <ClCompile Include="src\thermal.cpp" />
+    <ClCompile Include="src\tmData_serialization.cpp" />
     <ClCompile Include="src\units.cpp" />
     <ClCompile Include="src\zeros.cpp" />
   </ItemGroup>
