Implementing CTest / CDash system
git-svn-id: file:///mnt/svn/rtmath@749 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -5,6 +5,9 @@
 cmake_minimum_required (VERSION 2.8)
 project(rtmath CXX Fortran C)
 
+include (CTest)
+enable_testing()
+
 # Add path for custom modules
 set(CMAKE_MODULE_PATH
   ${CMAKE_MODULE_PATH}
