git-svn-id: file:///mnt/svn/rtmath@752 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/expand-shorthand/CMakeLists.txt
+++ b/rtmath/rtmath-apps/expand-shorthand/CMakeLists.txt
@@ -5,7 +5,7 @@ addapp(rtmath-expand-shorthand)
 
 if(BUILD_TESTING)
 	add_test (paramSet rtmath-expand-shorthand 0)
-	set_tests_properties (rtmath-lib-link
+	set_tests_properties (paramSet
 		PROPERTIES PASS_REGULAR_EXPRESSION "Expansion of"
 		)
 endif()
