--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -93,10 +93,14 @@ if(LOAD_PACKAGES)
 	find_package(BZip2)
 	# PCL is needed for convex and concave hull calculations.
 	# Used by the core library for statistics generation.
+	find_package(Qhull REQUIRED)
 	find_package(VTK REQUIRED)
 	find_package(PCL 1.0 REQUIRED)
 	# ImageMagick is needed for loading PNG files
 	find_package(ImageMagick COMPONENTS Magick++ REQUIRED)
+
+# TODO: find tmatrix if installed and set flags
+#	find_package(tmatrix)
 endif()
 # Take OpenMP option and enable / disable as appropriate
 IF(USE_OPENMP)
